--- a/Proyecto/package.json
+++ b/Proyecto/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@angular/animations": "~12.2.0",
     "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
+    "@angular/compiler": "^12.2.4",
     "@angular/core": "~12.2.0",
     "@angular/forms": "^12.2.2",
     "@angular/http": "^7.2.16",
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@popperjs/core": "^2.9.3",
+    "angular2-cookie": "^1.2.6",
     "bootstrap": "^5.0.0-beta3",
+    "ngx-cookie-service": "^12.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
