--- a/frontend/Proyecto/package.json
+++ b/frontend/Proyecto/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.9.3",
     "angular2-cookie": "^1.2.6",
     "bootstrap": "^5.0.0-beta3",
+    "file-saver": "^2.0.5",
     "ngx-cookie-service": "^12.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "~12.2.0",
     "@angular/cli": "^12.2.2",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
