--- a/frontend/Proyecto/package.json
+++ b/frontend/Proyecto/package.json
@@ -25,9 +25,11 @@
     "angular2-cookie": "^1.2.6",
     "bootstrap": "^5.0.0-beta3",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.3.3",
     "ngx-cookie-service": "^12.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xml-to-pdf": "^1.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -36,7 +38,6 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/file-saver": "^2.0.3",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
